Add GNU GPL 3 license

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    
-    
+    <meta name="author" content="胡雨軒 Петр">
+    <meta git-repository='https://github.com/piotr-yuxuan/sample-dirac-re-frame'>
+    <title>Sample project configuration for re-frame and Dirac</title>
   </head>
   <body>
     <div id="app"></div>
